# rust-plexapi

./: .gitignore  Cargo.toml  README.md
plexapi/: Cargo.toml
plexapi/src/: lib.rs
plexapi/src/auth/: mod.rs
plexapi/src/client/: mod.rs  session.rs
plexapi/src/errors/: mod.rs
plexapi/src/http/: mod.rs  request.rs  response.rs
plexapi/src/plex/: account.rs  client.rs  library.rs  mod.rs  playlist.rs  server.rs  session.rs  types.rs
plexapi/src/server/: mod.rs
plexapi/src/types/: account.rs  device.rs  filter.rs  library.rs  media.rs  mod.rs  playlist.rs  sections.rs  server.rs
plexapi/src/types/media/: audio.rs  common.rs  mod.rs  video.rs
samples/: Cargo.toml
samples/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
