[package]
authors = ["Matthias <matthias.seitz@tum.de>"]
name = "plexapi"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
env_logger = "0.4.3"
futures = "0.1.17"
hyper = "0.11.8"
log = "0.3.8"
serde = "1.0.21"
serde-xml-rs = "0.2.1"
serde_derive = "1.0.21"
serde_json = "1.0.6"
tokio = "0.0.0"
tokio-core = "0.1.10"
tokio-service = "0.1.0"
uname = "0.1.1"
url = "1.6.0"

[dependencies.reqwest]
features = ["unstable"]
version = "0.8.1"
